Changelog:
---------------------
/ September 10, 2010 /
---------------------
- Graduate search courses are now supported (e.g. CS 6*)

---------------------
/ September 4, 2010 /
---------------------
- Fixed a bug with the new Dubai campus courses screwing up my parsing
  algorithm
- Refactored the data model for conflicts
- Added a bunch of unit tests to do code cleanup
- Lots of code sanitization. I'm anticipating passing this site onto another
  group to take care of after I graduate, we'll see how it goes. If it falls
  through and possibly if it doesn't I'll open source the code on github.
- Updated YUI to 2.8.1. Made some slight stylistic changes

---------------------
/ November 21, 2009 /
---------------------
- Fixed a bug that would return nothing if two required sections were held for the same
  lecture

--------------------
/ October 10, 2009 /
--------------------
- Added elective search support. Want to know what arts courses fit into your schedule?
  type "ARTS" as the name and "*" as the code.

--------------------
/ March 14, 2009   /
--------------------
- Fixed a bug that didn't allow multiple times for a single course per day
- Fixed a bug where certain evening classes showed as morning and vice-versa
  (I have to guess at this because waterloo specifies times in 12-hour clock with
   no AM/PM. Amazing)
- Happy \pi day!

--------------------
/ January 28, 2009 /
-------------------
- Fixed Safari bugs on stats page and main page
- Renamed a few of the columns (e.g. Average Idle Time -> Time between classes)
- Made the timetable default to the first row after a request
- Fixed a bug where courses running at different times on different days of the
  week were not picked up

--------------------
/ January 11, 2009 /
-------------------
- Added links to the rate my professor page for a given professor

--------------------
/ January 7, 2009 /
-------------------
- Fixed confusion with start times, a class from 11:30-12:20 will now fit