@@ -8,7 +8,7 @@
     <!-- Combo-handled YUI JS files: --> 
     <script type="text/javascript" src="http://yui.yahooapis.com/combo?2.8.1/build/utilities/utilities.js&2.8.1/build/container/container-min.js&2.8.1/build/datasource/datasource-min.js&2.8.1/build/datatable/datatable-min.js&2.8.1/build/json/json-min.js"></script>
     <meta name="title" content="Waterloo Course Qualifier" />
-    <meta name="description" content="A simple way to select your courses by way of sorting all possible schedules on specific metrics, like rate my professors quality, number of days off, or how early each class starts." />
+    <meta name="description" content="A simple way to select your courses by way of sorting all possible schedules on specific metrics, like number of days off, or how early each class starts." />
     <link rel="image_src" href="http://www.coursequalifier.com/images/qualifier.jpg" />
 
     <script type="text/javascript" src="js/qualifier/qualifier.js"></script>
@@ -276,9 +276,6 @@
         <li> Earliest start time: earliest start of a class in the week</li>
         <li> Latest start time: latest end of a class in the week</li>
         <li> Lateness: how close you are to having all your classes end at midnight (as a percentage) </li>
-        <li> "Professor Quality": average &quot;quality&quot; from <a href="http://www.ratemyprofessors.com">ratemyprofessors.com</a>
-             Take this with a grain of salt, I've had plenty of great professors with bad rate my professor ratings and plenty
-                    vice-versa. It depends on your learning style
         </li>
 
     </ul>
@@ -289,7 +286,7 @@
       <br /><a href="http://uwaterloo.ca/"><img src="images/uwlogo.jpg" border="0" style="float:right; margin-top:-40px;" alt="UW"/></a>
       <p>&copy; 2010 <a href="http://www.thomasdimson.com/">Thomas Dimson</a>, design by <a href="http://donmckenzie.ca/">Don McKenzie</a>
       <span class="noemphasis">
-      Last updated September 10, 2010 (data updated on-demand) - <a href="changelog.txt">Changelog</a> </span>
+      Last updated October 21, 2010 (data updated on-demand) - <a href="changelog.txt">Changelog</a> </span>
 
       </p>
     </div>
