@@ -10,7 +10,6 @@ class WaterlooCatalog( object ):
     validMetrics = [
         KeyedObject( "Days of class", "days_full",  "number" ).getJson(),
         KeyedObject( "Time between classes",   "idle_time", "duration"  ).getJson(),
-        KeyedObject( "\"Professor Quality\"",    "rmp_quality", "number"  ).getJson(),
         KeyedObject( "Earliest start time", "earliest_start", "time"  ).getJson(),
         KeyedObject( "Latest end time",     "latest_end", "time"  ).getJson(),
         KeyedObject( "Lateness",       "lateness",   "percentage"  ).getJson()
@@ -28,7 +27,6 @@ class WaterlooCatalog( object ):
         self.metrics["earliest_start"] = self.computeEarliestStartTime()
         self.metrics["latest_end"] = self.computeLatestEndTime()
         self.metrics["lateness"] = self.computeLateness()
-        self.metrics["rmp_quality"] = self.computeRateMyProfessorsQuality()
 
     #Time in between classes
     def computeIdleTime(self):
@@ -40,13 +38,6 @@ class WaterlooCatalog( object ):
                 idleTime += sortedDay[i+1].startTime - sortedDay[i].endTime
         return idleTime
     
-    def computeRateMyProfessorsQuality(self):
-        rmpRatings = [e.rateMyProfessorsQuality for e in self.sections if e.rateMyProfessorsQuality != None]
-        if len(rmpRatings) == 0:
-            return None
-        else:
-            return float(sum(rmpRatings)) / len(rmpRatings)
-
     def computeDaysFull(self):
         return len(set(o.day for o in itertools.chain(*[e.offerings for e in self.sections])))
 
